# rules_mojo

./: .gitignore  .vale.ini  CODE_OF_CONDUCT.md  LICENSE  MODULE.bazel  Pulumi.yaml  README.md  SECURITY.md  flake-module.nix  flake.nix  lre-bazel.nix  mojo-sdk.nix  mojo.nix  ncurses6-bin.nix  pre-commit-hooks.nix  tinfo6-bin.nix
.github/styles/config/vocabularies/rules_mojo/: accept.txt
.github/workflows/: docs.yaml  local-remote-execution.yaml  pre-commit.yml  test-stdlib.yaml
docs/: astro.config.mjs  bun.lockb  package.json
docs/src/content/docs/: index.mdx
docs/src/content/docs/guides/: setup.md
docs/src/content/docs/reference/: args.md  defs.md  mojo.md  providers.md  resolve_rule_inputs.md  toolchain.md
examples/: BUILD.bazel  hello.mojo
examples/mypackage/: mymodule.mojo
licenses/: Mojo-LICENSE  Mojo-Third-Party-Notices
local-remote-execution/: create-worker.nix  lre-kill-the-mojo.nix  lre-mojo-cluster.nix  lre-mojo.nix  worker-lre-mojo.yaml
modules/: defaultMojoEnv.nix  rules_mojo.nix
mojo/: BUILD.bazel  args.bzl  attributes.bzl  defs.bzl  extensions.bzl  mojo.bzl  providers.bzl  resolve_rule_inputs.bzl  toolchain.bzl
mojo/templates/: function_template.vm  provider_template.vm  rule_template.vm
templates/default/: .bazelrc  .gitignore  MODULE.bazel  README.md  flake.nix  pre-commit-hooks.nix
