module(
    name = "rules_mojo",
    version = "0",
    compatibility_level = 0,
)

bazel_dep(name = "bazel_skylib", version = "1.7.1", dev_dependency = True)

git_override(
    module_name = "rules_ll",
    # Note: Keep this commit in sync with the one in flake.nix.
    commit = "a8a26cc78c43896b179caaa263857bd6c88a1da9",
    remote = "https://github.com/eomii/rules_ll",
)

bazel_dep(name = "local-remote-execution", version = "0")
archive_override(
    module_name = "local-remote-execution",
    integrity = "sha256-nWJ6XlV9YT1MSbLur6ygZ7IDaqHInm9mtwUmjRYqLQo=",
    strip_prefix = "nativelink-2adda2475eed578d610a66b98f965922656061af/local-remote-execution",
    urls = [
        "https://github.com/TraceMachina/nativelink/archive/2adda2475eed578d610a66b98f965922656061af.zip",
    ],
)

# Note: The pipe-through mechanism from rules_ll makes this actually LLVM~19.
bazel_dep(name = "llvm-project-overlay", version = "17-init-bcr.3")

# The llvm-project-overlay extension aggregates patches across all modules that
# invoke it. This means that rules_ll's custom patches are applied implicitly.
llvm_project_overlay = use_extension(
    "@llvm-project-overlay//utils/bazel:extensions.bzl",
    "llvm_project_overlay",
)
use_repo(
    llvm_project_overlay,
    "llvm-project",
)

register_toolchains("@rules_mojo//mojo:mojo_toolchain")

bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "rules_ll", version = "0")

rules_mojo_dependencies = use_extension(
    "@rules_mojo//mojo:extensions.bzl",
    "rules_mojo_dependencies",
)
use_repo(
    rules_mojo_dependencies,
    "mojo",
)

# Documentation.
bazel_dep(name = "stardoc", version = "0.7.0", dev_dependency = True)
